tests/snapshots/examples_fixtures/type_system__failing__26_adt_match_constructor_arity_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/26_adt_match_constructor_arity_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E082]: CONSTRUCTOR ARITY MISMATCH

Constructor `Pair` expects 2 argument(s) but got 1.

  --> examples/type_system/failing/26_adt_match_constructor_arity_mismatch.flx:9:9
  |
9 |         Pair(a) -> a,
  |         ^^^^^^^
== stdout ==
<not executed>
